# cc-sessions-viewer

./: .gitignore  Cargo.toml  Makefile  README.md  app.py  pyproject.toml  requirements.txt  session_parser.py
.github/workflows/: release.yml
src/: app.rs  index.rs  indexer.rs  lib.rs  main.rs  models.rs  parser.rs  ui.rs
tests/: integration.rs
