[package]
name = "cc-sessions-viewer"
version = "0.1.1"
edition = "2024"
description = "A terminal UI application for browsing Claude Code session history"
license = "MIT"
repository = "https://github.com/t-daisuke/cc-sessions-viewer"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
unicode-width = "0.2"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
