[package]
name = "cc-sessions-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
unicode-width = "0.2"
fuzzy-matcher = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
cli-clipboard = "0.4"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
